@@ -1,3 +1,8 @@
+2014-10-31  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* luatex.[ch] [W32TEX]: Handle DLLPROC as for TeX & Co.
+	* am/luatex.am: Define LuajitTeX.
+
 2014-10-13  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* luatex.[ch]: More sync with ../texmfmp.h and ../lib/texmfmp.c.
